NitrOS-9 V3.2.9:

----------------------------------------------------------
2013/01/04 David Ladd
List of files changed
M ChangeLog
A scripts/burst

Got the burst script from Boisy that was needed for the web portal
on sourceforge. This script is located in the scripts folder.  Please
keep in mind that you will need to have this burst script on your
sourceforge ssh server account to do the "make nightly".

----------------------------------------------------------
2013/01/03 David Ladd
List of files changed
M ChangeLog
M makefile
M rules.mak

Changed the dw3 format information in the rules.mak to use a single
sided format rather than double sided.  The double sided disk images
were preventing users booting off of the drivewire4 server using the
dw3 and becker boot disks.

Also updated the makefile related to the nightly build to use a
environment variable rather than boisy's fixed username.

At this time the upload of the zip file only works. Specific users ssh
account must have the burst script.

----------------------------------------------------------
2012/12/05 Robert Gualt
List of files changed
M ChangeLog
M level1/modules/kernel/krn.asm

Changed the GetMem rountine for Level1 krn. The routine compared
MaxMem against D.MLIM. This seemed to result in unwarranted loss
of memory and prevented at least one game, Interbank Incident, from running.
The comparison was removed resulting in an increase of available
memory. No problems have been noted.


----------------------------------------------------------
2012/12/05 David Ladd
List of files changed since hg clone on 2012/12/05
M ChangeLog
M level1/coco/modules/makefile
M rules.mak

Changes that were made were to supress listing sources to standard
out while compiling project.  This change was option "-l" in the rules.mak .

Change made to level1/coco/modules/makefile was to include adding
dw3_becker.sb and boot_dw3_becker to the level1 build for the CoCo.
